1、日志模块。2、完善播放组件

--- a/src/MusicPlayerOnline.Maui/Pages/SettingsPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/SettingsPage.xaml
@@ -194,7 +194,7 @@
                                  Grid.ColumnSpan="2">
                         <Button Text="日志"
                                 Command="{Binding OpenLogCommand}"/>
-                        <Button Text="本地缓存"
+                        <Button Text="歌曲缓存"
                                 Command="{Binding ClearCacheCommand}"/>
 
                         <BoxView Margin="0,10,0,10"
