--- a/src/MusicPlayerOnline.Maui/Pages/LogPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/LogPage.xaml
@@ -23,11 +23,13 @@
             </CollectionView>
         </ScrollView>
 
-        <Button Text="清空"
-                VerticalOptions="End"
-                Command="{Binding ClearLogsCommand}"/>
-        <Button Text="上传"
+        <Button Text="上传到服务器"
+                Margin="0,0,0,5"
                 VerticalOptions="End"
                 Command="{Binding UpdateLogsCommand}"/>
+        <Button Text="删除本地日志"
+                VerticalOptions="End"
+                Command="{Binding ClearLogsCommand}"/>
+
     </StackLayout>
 </ContentPage>
