1、调整部分页面布局。2、修改播放列表的绑定模型

--- a/src/MusicPlayerOnline.Maui/Pages/PlayingPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/PlayingPage.xaml
@@ -124,10 +124,11 @@
             </StackLayout>
         </StackLayout>
 
-        <controls:Player x:Name="player"
-                         Margin="0,20,0,0"
-                         VerticalOptions="End">
-        </controls:Player>
+        <StackLayout VerticalOptions="End"
+                     IsVisible="{OnPlatform Default=false,UWP=true,MacCatalyst=true}">
+            <controls:Player x:Name="player"
+                             Margin="0,20,0,0">
+            </controls:Player>
+        </StackLayout>
     </StackLayout>
-
 </ContentPage>
