--- a/src/MusicPlayerOnline.Maui/Pages/SearchPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/SearchPage.xaml
@@ -6,55 +6,29 @@
              x:Class="MusicPlayerOnline.Maui.Pages.SearchPage"
              Title="搜索">
 
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <Style x:Key="LabelMusicSearching" TargetType="Label">
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding IsSearching}" Value="True" TargetType="Label">
-                        <Setter Property="IsVisible" Value="true"/>
-                    </DataTrigger>
-                    <DataTrigger Binding="{Binding IsSearching}" Value="false" TargetType="Label">
-                        <Setter Property="IsVisible" Value="false"/>
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-
-            <Style x:Key="CollectionViewMusicSearchResultBlock"  TargetType="CollectionView">
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding IsSearching}" Value="True" TargetType="CollectionView">
-                        <Setter Property="IsVisible" Value="false"/>
-                    </DataTrigger>
-                    <DataTrigger Binding="{Binding IsSearching}" Value="false" TargetType="CollectionView">
-                        <Setter Property="IsVisible" Value="true"/>
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-        </ResourceDictionary>
-    </ContentPage.Resources>
-
     <StackLayout Margin="16">
         <StackLayout Margin="0,0,0,10"
                      VerticalOptions="Start">
             <StackLayout Orientation="Horizontal">
                 <Label Text="搜索"
-                   VerticalTextAlignment="Center"
-                   HorizontalOptions="Start"
-                   Margin="0,0,10,0" />
+                       VerticalTextAlignment="Center"
+                       HorizontalOptions="Start"
+                       Margin="0,0,10,0" />
 
                 <SearchBar Text="{Binding SearchKeyword}"
-                       SearchCommand="{Binding SearchCommand}"
-                       HorizontalOptions="FillAndExpand"/>
+                           SearchCommand="{Binding SearchCommand}"
+                           HorizontalOptions="FillAndExpand"/>
             </StackLayout>
-            <Label Text="拼命查询中..."
-                   Margin="0,20,0,0"
-                   HorizontalOptions="Center" 
-                   Style="{StaticResource LabelMusicSearching}"/>
+            <ActivityIndicator IsRunning="True"
+                               IsVisible="{Binding IsBusy}"
+                               Margin="0,10,0,0"/>
         </StackLayout>
 
         <ScrollView VerticalOptions="FillAndExpand">
             <StackLayout>
-                <CollectionView ItemsSource="{Binding MusicSearchResult}"    
-                            Style="{StaticResource CollectionViewMusicSearchResultBlock}">
+                <CollectionView ItemsSource="{Binding MusicSearchResult}"
+                                EmptyView="什么也没找到"
+                                IsVisible="{Binding IsNotBusy}">
 
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
